# ParallelFinalProject

./: README.md  Resources.md  TODO.md
DATA/: p2p-Gnutella31.txt  protein_interaction_1.graph
graph/: email-Enron.format  email_Enron.format  p2p-Gnutella30.format  pre_process.py  process.sh  process_format.py  process_graph_to_list.py  soc-gplus.edges  soc-gplus.format  soc-gplus.list  soc_gplus.format
graph/ca-AstroPh/: ca-AstroPh.format
graph/test/: test.format  test.list  test1.format  test2.format  test2.list  test3.format  test3.graph  test3.list  test4.format  test4.list  test5.format  test5.list
ref/gpu-fan-1.0/: CMakeLists.txt  ChangeLog  INSTALL  README
ref/gpu-fan-1.0/src/cpu/: graph.cc
ref/gpu-fan-1.0/src/gpu/: CMakeLists.txt  array.h  bitarray.h  common.cu  graph.cc  graph.h
ref/gpu-fan-1.0/src/tests/: REAMDE  breast_coexpress.txt  randome_graph.py
ref/parallel_bc/ParallelBC_cuda_bc_edge/: bo_1948gem.cpu_bc  bo_1948gem.edge
src/: .gitignore  Makefile  betweenness_centrality  cpu_bc  cpu_bc.cpp  cpu_bc.h  deg1_order.cu  deg1_order.h  edge_bc.cu  edge_bc.h  gpu_bc_node.cu  gpu_bc_node.h  gpu_bc_node_virtual.cu  gpu_bc_node_virtual.h  graph.cpp  graph.h  graph_virtual.cpp  graph_virtual.h  log  main.cpp
src/bak/: cpu_bc.cpp  cpu_bc.h  gpu_bc_node.cu  gpu_bc_node_virtual.cu
src/gpu-fan-1.0/src/cpu/: CMakeLists.txt  centrality-cpu.cc  fheap.cc  graph.h
src/gpu-fan-1.0/src/gpu/: bc.cu  cc-ec.cu  common.h  (+3 more)
src/parallel_bc/ParallelBC_cuda_bc_edge/: BC_cpu.cpp  BC_gpu.cu  Makefile  bo_1948gem.gpu_bc  g-all-run.sh  graph_indexed.h  main  main.cu
(+12 files in other folders)
